fijado el error de introducir personaje

--- a/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.html
+++ b/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.html
@@ -1,4 +1,4 @@
-<ion-content class="secondBackground">   
+<ion-content class={{varEscenario}}>   
   <div *ngIf="!showImage">
     <ion-grid>
      <ion-row>
