Implementado primera version objetos y mochila

--- a/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.scss
+++ b/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.scss
@@ -9,7 +9,7 @@
   height: 100%;
 }
 #containerHabitacion{
-  background: url("../../../assets/escape-room/habitacion.JPG");
+  background: url("../../../assets/escape-room/imagenBase.jpg");
   background-size: cover;
   height: 100%;
 }
