--- a/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.html
+++ b/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.html
@@ -1,20 +1,28 @@
 <ion-content>
  
- 
-    <div id="{{varEscenario}}">
+      <div id= "{{varEscenario}}">
        <ion-grid>
          <ion-row>        
             <ion-col>
               <div *ngIf="showImage == false">
                <img src="../../../assets/escape-room/profesor.png"> 
                <mat-icon (click)="start()" style="color: blue; zoom: 2.0;">contact_support</mat-icon>
-              </div> 
+              </div>
+              <div *ngIf="mapa == imagenBase && !recogido else other_content">
+                <button (click)="abrirMochila()" style="margin-left: 10px; margin-top: 5px; color: black; background-color: darkgoldenrod; position: absolute;">Mochila</button>
+                  <img style="margin-left: 250px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto1.nombre)" src="../../../assets/escape-room/objetos/{{objeto1.nombre}}.png"> 
+                  <img style="text-align: center; margin-left: 10px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto2.nombre)" src="../../../assets/escape-room/objetos/{{objeto2.nombre}}.png"> 
+              </div>
+              <ng-template #other_content>
+                <button (click)="abrirMochila()" style="margin-left: 10px; margin-top: 5px; color: black; background-color: darkgoldenrod; position: absolute;">Mochila</button>  
+                  <img style="margin-left: 260px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto2.nombre)" src="../../../assets/escape-room/objetos/{{objeto2.nombre}}.png"> 
+              </ng-template>
+         
            </ion-col>   
          </ion-row> 
-      </ion-grid>  
-    </div>
-    
-
+        </ion-grid>  
+      </div>
+      
 </ion-content>
 
 
