--- a/src/app/juego-de-escape-room/mochila/mochila.page.html
+++ b/src/app/juego-de-escape-room/mochila/mochila.page.html
@@ -1,7 +1,9 @@
 <ion-content>
   <div id= "containerMochila">
+    <button style="margin-left:10px; margin-top:10px;" (click)="volver()">Volver</button>
     <div *ngFor="let objeto of objetos">
        <button style="margin-left: 325px; margin-top: 200px; color: black; background-color: blanchedalmond;">{{objeto.nombre}}</button>
+       <img style="margin-left: 25px; margin-top: 200px; height: 50px;" src="../../../assets/escape-room/objetos/{{objeto.nombre}}.png"> 
     </div>
   </div>
 </ion-content>
