--- a/src/app/juego-de-escape-room/mochila/mochila.page.html
+++ b/src/app/juego-de-escape-room/mochila/mochila.page.html
@@ -1,9 +1,16 @@
-<ion-content>
-  <div id= "containerMochila">
-    <button style="margin-left:10px; margin-top:10px;" (click)="volver()">Volver</button>
-    <div *ngFor="let objeto of objetos">
-       <button style="margin-left: 325px; margin-top: 200px; color: black; background-color: blanchedalmond;">{{objeto.nombre}}</button>
-       <img style="margin-left: 25px; margin-top: 200px; height: 50px;" src="../../../assets/escape-room/objetos/{{objeto.nombre}}.png"> 
-    </div>
-  </div>
+<ion-content class="containerMochila">
+    <button mat-mini-fab aria-label="miniFabButton" style="background-color: orange; position:fixed; margin-top: 10px;  margin-left: 10px;" (click)="volver()">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+
+    <table id="tablaObjetos">
+      <tr>
+        <th>Objeto</th>
+      </tr>
+      <tr>
+        <div *ngFor="let objeto of objetos">
+          <td (click)="ensenarObjeto(objeto.nombre)">{{objeto.nombre}}</td>
+        </div>
+      </tr>
+    </table>
 </ion-content>
