--- a/src/app/juego-de-escape-room/mochila/mochila.page.scss
+++ b/src/app/juego-de-escape-room/mochila/mochila.page.scss
@@ -1,5 +1,27 @@
-#containerMochila{
-    background: url("../../../assets/escape-room/mochila.jpg");
-    background-size: cover;
-    height: 100%;
-  }
+ion-content.containerMochila{
+    --background: url("../../../assets/escape-room/mochila.jpg") no-repeat center/cover fixed;
+    
+}
+    #tablaObjetos {
+      margin-top: 30px;
+      margin-left: 300px;
+    }
+  
+
+#tablaObjetos td, #tablaObjetos th {
+  border: 1px solid #ddd;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 60px;
+  padding-right: 60px;}
+#tablaObjetos tr:nth-child(even){background-color: #f2f2f2;}
+#tablaObjetos tr:hover {background-color: #ddd;}
+#tablaObjetos th {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 60px;
+  padding-right: 60px;
+  text-align: center;
+  background-color: orange;
+  color: white;
+}
