Avances escape con mochila y guardar

--- a/src/app/juego-de-escape-room/mochila/mochila.page.html
+++ b/src/app/juego-de-escape-room/mochila/mochila.page.html
@@ -9,7 +9,7 @@
       </tr>
       <tr>
         <div *ngFor="let objeto of objetos">
-          <td (click)="ensenarObjeto(objeto.nombre)">{{objeto.nombre}}</td>
+          <td (click)="ensenarObjeto(objeto)">{{objeto.nombre}}</td>
         </div>
       </tr>
     </table>
