--- a/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.html
+++ b/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.html
@@ -8,7 +8,7 @@
                <img src="../../../assets/escape-room/profesor.png"> 
                <mat-icon (click)="start()" style="color: blue; zoom: 2.0;">contact_support</mat-icon>
               </div>
-              <div id="mochilaYguardar" *ngIf="mapa == imagenBase && !recogido && !recogido2 else other_content">
+              <div *ngIf="mapa == imagenBase && !recogido && !recogido2 && !recogidaPista else other_content">
                   <button mat-mini-fab aria-label="miniFabButton" style="background-color: orange; position: fixed; margin-top: 10px; " (click)="abrirMochila()">
                       <mat-icon >folder</mat-icon>
                   </button>
@@ -20,7 +20,7 @@
                   <img style="margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto2.nombre)" src="../../../assets/escape-room/objetos/{{objeto2.nombre}}.png"> 
               </div>
               <ng-template #other_content>
-                <div *ngIf="recogido && !recogido2 else third_content">
+                <div *ngIf="recogido && !recogido2 && !recogidaPista else third_content">
                   <button mat-mini-fab aria-label="miniFabButton" style="background-color: orange; position:fixed; margin-top: 10px; " (click)="abrirMochila()">
                       <mat-icon >folder</mat-icon>
                   </button>  
@@ -32,7 +32,7 @@
                 </div>
               </ng-template>
                 <ng-template #third_content>
-                  <div *ngIf="!recogido && recogido2 else fourth_content">
+                  <div *ngIf="!recogido && recogido2 && !recogidaPista else eight_content">
                     <button mat-mini-fab aria-label="miniFabButton" style="background-color: orange; position:fixed; margin-top: 10px; " (click)="abrirMochila()">
                         <mat-icon >folder</mat-icon>
                     </button>  
@@ -43,6 +43,56 @@
                     <img style="margin-left: 275px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto1.nombre)" src="../../../assets/escape-room/objetos/{{objeto1.nombre}}.png"> 
                   </div>
               </ng-template>
+              <ng-template #eight_content>
+                <div *ngIf="recogido && recogido2 && !recogidaPista else five_content">
+                  <button mat-mini-fab aria-label="miniFabButton" style="background-color: orange; position:fixed; margin-top: 10px; " (click)="abrirMochila()">
+                      <mat-icon >folder</mat-icon>
+                  </button>  
+                  <button mat-mini-fab aria-label="miniFabButton" style="background-color: blue; position: fixed; margin-left: 45px; margin-top: 10px;" (click)="guardarEscape()">
+                    <mat-icon >save</mat-icon>
+                </button> 
+                  <img style="position: fixed; margin-left: 250px; margin-top: 110px; height: 50px;" (click)="abrirObjeto(objetoEnigma)" src="../../../assets/escape-room/cajaFuerte.png"> 
+                </div>
+            </ng-template>
+              <!--EMPIEZA AQUI-->
+            <ng-template #five_content>
+                <div *ngIf=" !recogido && !recogido2 && recogidaPista else six_content">
+                  <button mat-mini-fab aria-label="miniFabButton" style="background-color: orange; position: fixed; margin-top: 10px; " (click)="abrirMochila()">
+                      <mat-icon >folder</mat-icon>
+                  </button>
+                  <button mat-mini-fab aria-label="miniFabButton" style="background-color: blue; position: fixed; margin-left: 45px; margin-top: 10px;" (click)="guardarEscape()">
+                    <mat-icon >save</mat-icon>
+                  </button>
+                  <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 35px;" (click)="abrirObjeto(objetoEnigma)" src="../../../assets/escape-room/cajaFuerteAbierta.jpg"> 
+                  <img style="margin-left: 275px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto1.nombre)" src="../../../assets/escape-room/objetos/{{objeto1.nombre}}.png"> 
+                  <img style="margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto2.nombre)" src="../../../assets/escape-room/objetos/{{objeto2.nombre}}.png"> 
+                </div>
+            </ng-template>
+            <ng-template #six_content>
+              <div *ngIf="recogido && !recogido2 && recogidaPista else seven_content">
+                <button mat-mini-fab aria-label="miniFabButton" style="background-color: orange; position:fixed; margin-top: 10px; " (click)="abrirMochila()">
+                    <mat-icon >folder</mat-icon>
+                </button>  
+                <button mat-mini-fab aria-label="miniFabButton" style="background-color: blue; position: fixed; margin-left: 45px; margin-top: 10px;" (click)="guardarEscape()">
+                  <mat-icon >save</mat-icon>
+              </button>
+                <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 35px;" (click)="abrirObjeto(objetoEnigma)" src="../../../assets/escape-room/cajaFuerteAbierta.jpg"> 
+                <img style="margin-left: 330px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto2.nombre)" src="../../../assets/escape-room/objetos/{{objeto2.nombre}}.png"> 
+              </div>
+            </ng-template>
+              <ng-template #seven_content>
+                <div *ngIf="!recogido && recogido2 && recogidaPista else fourth_content">
+                  <button mat-mini-fab aria-label="miniFabButton" style="background-color: orange; position:fixed; margin-top: 10px; " (click)="abrirMochila()">
+                      <mat-icon >folder</mat-icon>
+                  </button>  
+                  <button mat-mini-fab aria-label="miniFabButton" style="background-color: blue; position: fixed; margin-left: 45px; margin-top: 10px;" (click)="guardarEscape()">
+                    <mat-icon >save</mat-icon>
+                </button> 
+                  <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 35px;" (click)="abrirObjeto(objetoEnigma)" src="../../../assets/escape-room/cajaFuerteAbierta.jpg"> 
+                  <img style="margin-left: 275px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto1.nombre)" src="../../../assets/escape-room/objetos/{{objeto1.nombre}}.png"> 
+                </div>
+            </ng-template>
+               <!--EMPIEZA AQUI-->
                   <ng-template #fourth_content>
                       <button mat-mini-fab aria-label="miniFabButton" style="background-color: orange; position:fixed; margin-top: 10px; " (click)="abrirMochila()">
                           <mat-icon >folder</mat-icon>
@@ -50,7 +100,7 @@
                       <button mat-mini-fab aria-label="miniFabButton" style="background-color: blue;position: fixed; margin-left: 45px; margin-top: 10px;" (click)="guardarEscape()">
                         <mat-icon >save</mat-icon>
                     </button> 
-                      <img style="position: fixed; margin-left: 250px; margin-top: 110px; height: 50px;" (click)="abrirObjeto(objetoEnigma)" src="../../../assets/escape-room/cajaFuerte.png">                                
+                      <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 35px;" (click)="abrirObjeto(objetoEnigma)" src="../../../assets/escape-room/cajaFuerteAbierta.jpg">                                
               </ng-template>
            </ion-col>   
          </ion-row> 
