Cambios en los modelos

--- a/src/app/juego-de-escape-room/mochila/mochila.page.html
+++ b/src/app/juego-de-escape-room/mochila/mochila.page.html
@@ -8,7 +8,7 @@
         <th>Objeto</th>
       </tr>
       <tr>
-        <div *ngFor="let objeto of objetos">
+        <div *ngFor="let objeto of objetosMochila">
           <td (click)="ensenarObjeto(objeto)">{{objeto.nombre}}</td>
         </div>
       </tr>
